# VLNontheFly

./: .gitignore  PRODUCTION_FRAME_TEST_RECORD.md  PRODUCTION_PIPELINE_RUNBOOK.md  README.md
AI_SLOP_DETECTIONS/: ACTIONABLE_FIXES.md  CODE_REVIEW_FINDINGS.md  README.md  TF_ISSUES_ADDENDUM.md
depth_estimator/: CMakeLists.txt  README.md  package.xml
depth_estimator/config/: depth_estimator.yaml
depth_estimator/depth_estimator/: depth_estimator_node.py
depth_estimator/launch/: depth_estimator.launch.py
edgellm_vlm_ros/: CMakeLists.txt  README.md  package.xml
edgellm_vlm_ros/config/: nav_supervisor.yaml  point_gate.yaml  primitive_gate.yaml  region_gate.yaml  region_gate_pipeline.yaml  vlm_node.yaml
edgellm_vlm_ros/include/edgellm_vlm_ros/: vlm_node.hpp
edgellm_vlm_ros/launch/: d435i_vlm.launch.py
edgellm_vlm_ros/scripts/: vlm_nav_supervisor.py  vlm_point_gate.py  vlm_primitive_gate.py  vlm_region_gate.py
edgellm_vlm_ros/src/: cuda_link_stub.cu  main.cpp  vlm_node.cpp
edgellm_vlm_ros/test/: test_vlm_nav_supervisor.py  test_vlm_point_gate.py  test_vlm_primitive_gate.py  test_vlm_region_gate.py
ego-planner-swarm/: EXTERNAL_MODE_TODO.md  HARDWARE_TESTS.md  raptor_path_tracker.py
ego-planner-swarm/src/planner/plan_env/: CMakeLists.txt  package.xml
ego-planner-swarm/src/planner/plan_env/include/plan_env/: depth_projection.h  grid_map.h
ego-planner-swarm/src/planner/plan_env/src/: grid_map.cpp
ego-planner-swarm/src/planner/plan_env/test/: test_depth_projection.cpp
ego-planner-swarm/src/planner/plan_manage/include/ego_planner/: ego_replan_fsm.h
ego-planner-swarm/src/planner/plan_manage/launch/: advanced_param.launch.py  real_single_drone.launch.py  run_in_sim.launch.py  single_run_in_sim.launch.py
ego-planner-swarm/src/planner/plan_manage/src/: ego_replan_fsm.cpp  traj_server.cpp
ego-planner-swarm/src/planner/traj_utils/src/: planning_visualization.cpp
mobile_flight/: README.md  install_jetson.sh
mobile_flight/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
mobile_flight/mobile_gazebo/: CMakeLists.txt  package.xml
mobile_flight/mobile_gazebo/launch/: ego_planner_bag_test.launch.py  ego_planner_flight.launch.py  flight_stack.launch.py  optitrack_full_pipeline.launch.py  vio_full_pipeline.launch.py
mobile_flight/mobile_gazebo/src/: offboard_velocity_control.cpp  offboard_velocity_control.cpp.restored
mobile_flight/mobile_msgs/: CMakeLists.txt  package.xml
mobile_flight/mobile_msgs/srv/: SetVelocity.srv  Takeoff.srv
planner_wrapper/: CMakeLists.txt  package.xml
planner_wrapper/configs/: dependencies.sh  iplanner.yaml  parameters.yaml
planner_wrapper/imports/iplanner/: iplanner_agent.py  percept_net.py  planner_net.py
planner_wrapper/imports/navdp/: policy_agent.py  policy_backbone.py  policy_network.py
planner_wrapper/imports/navdp/depth_anything/: run.py
planner_wrapper/imports/utils/: tracking_utils.py
planner_wrapper/launch/: ego_raptor.launch.py  iplanner.launch.py  iplanner_optitrack.launch.py  navdp.launch.py
planner_wrapper/msg/: Trajectory2D.msg
planner_wrapper/src/: controller.py  controller_optitrack.py  ego_planner_bridge.py  fig8_pos_cmd.py  iplanner.py  iplanner_optitrack.py  navdp.py  no_fmu.py  odometry_converter.py  odometry_converter_optitrack.py  point.py  pos_cmd_to_raptor.py  relative_goal_to_map.py  set_external_mode.py
realsense-ros/realsense2_camera/include/: base_realsense_node.h
realsense-ros/realsense2_camera/src/: base_realsense_node.cpp  parameters.cpp  tfs.cpp
vio_bridge/: CMakeLists.txt  package.xml
vio_bridge/launch/: openvins_realsense.launch.py  vio_bridge.launch.py
vio_bridge/src/: openvins_bridge_node.cpp  optitrack_bridge_node.cpp  vio_bridge_node.cpp
