<?xml version="1.0"?>
<package format="3">
  <name>depth_estimator</name>
  <version>0.1.0</version>
  <description>ROS2 Humble wrapper para estimativa de profundidade monocular</description>

  <maintainer email="your@email.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
